[package]
name = "zero2prod"
version = "0.1.0"
authors = ["ncolesummers <nsummers72@gmail.com>"]
edition = "2021"
description = "An email subscription service from the book Zero to Production by Luca Palmieri"
license = "MIT"

[lib]
name = "zero2prod"
path = "./src/lib.rs"

[[bin]]
name = "zero2prod"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"